# ref

./: .ubunto_colors.sh  environment.md  ipython_line_profile_setup.md
algorithmics/: README.md  chapter1.py
causal_ai_book/: README.md  chapter2.py  main.py  pyproject.toml
foundations_programming/: README.md  item1.py
foundations_programming/binary_search/: README.md  download_imdb.py
foundations_programming/binary_search/search/: __init__.py  random.py
hello_xgboost/: .gitignore  README.md  pyproject.toml
hello_xgboost/src/xgb_utils/: __init__.py  get_data.py
hello_xgboost/test/: test_get_data.py
leetcode/: candy.py  course_schedule_ii.md  course_schedule_ii.py  merge_sort.py  string_parenthesis.py  word_search.py  word_search2.py
misc/: How Does the Internet Work notes.md  add_directory_to_pythonpath.md  django_tutorial.md  keras_intro.md  keras_intro.py  python2 and python3 env setup.md  sqlite3_tutorial.md  terminal_setup.md
